--- a/record_voice_android_app/app/src/main/res/layout/home_fragment.xml
+++ b/record_voice_android_app/app/src/main/res/layout/home_fragment.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
-            android:text="Button"
+            android:text="@{viewModel.startStopButtonText}"
             android:onClick="@{()-> viewModel.onStartStopButtonClicked()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
