--- a/record_voice_android_app/app/src/main/res/layout/home_fragment.xml
+++ b/record_voice_android_app/app/src/main/res/layout/home_fragment.xml
@@ -15,7 +15,22 @@
         android:id="@+id/home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/black"
         tools:context=".ui.home.HomeFragment">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="● REC"
+            android:textColor="#FF0000"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:isVisible="@{viewModel.isRecording}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/read_text_textView"
@@ -23,6 +38,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@{viewModel.readText}"
+            android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -35,9 +51,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="Skip"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/background_button"
+            android:fontFamily="@font/baloo_da"
             android:onClick="@{() -> viewModel.onSkipButtonClicked()}"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:text="Skip"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline" />
 
@@ -45,12 +68,17 @@
             android:id="@+id/start_stop_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginBottom="32dp"
-            android:text="@{viewModel.startStopButtonText}"
+            android:background="@drawable/background_button"
+            android:fontFamily="@font/baloo_da"
             android:onClick="@{()-> viewModel.onStartStopButtonClicked()}"
+            android:text="@{viewModel.startStopButtonText}"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,10 +95,15 @@
             android:id="@+id/retake_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:text="Retake"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/background_button"
+            android:fontFamily="@font/baloo_da"
             android:onClick="@{()-> viewModel.onRetakeButtonClicked()}"
+            android:text="Retake"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/skip_button"
             app:layout_constraintEnd_toStartOf="@+id/skip_button"
             app:layout_constraintStart_toStartOf="parent"
