--- a/record_voice_android_app/app/src/main/res/values/colors.xml
+++ b/record_voice_android_app/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorButton">#FBB400</color>
+    <color name="colorButtonPressed">#AA5D00</color>
 </resources>
